recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.error
Sierpinski:28: error: not found: value legnth
    avance(legnth/2)
           ^